Fix display bug caused by text. Fix alignment.

--- a/TheEddyPortfolio/css/styles.css
+++ b/TheEddyPortfolio/css/styles.css
@@ -1,6 +1,8 @@
 body {
     font-family: Avenir,Garamond;
     margin: 0;
+    padding: 0;
+    width: auto;
   
 }
 
@@ -11,27 +13,31 @@ body {
     position: relative;
     width: 100%;
     height: auto;
-    padding-top: 350px;
-    padding-bottom: 500px;
     color: #ffffff;
 
 
 }
 
 #raise {
-    left: 50%;
+    
+    position: absolute;
+    top: 13%;
+    left: 45%;
+    display:inline-block;
+    width: 30vw;
+
    
 
 }
 
 .reveal {
-    position: absolute;
+    
     animation: appear 2s forwards;
     animation-delay: 2s;
     opacity: 0;
 }
 
-span .reveal:hover {
+.reveal:hover {
     animation: appear 1s;
     opacity:0;
 }
@@ -47,15 +53,14 @@ span .reveal:hover {
 
 #curtain {
     width: 100%;
-    position: absolute;
     top: 0;
-    height: 800px;
+    height: 100vh;
 
 }
 
 ul {
     list-style-type: none;
-    margin-top: 400px;
+    margin: 0;
     top: 0;
     padding: 0;
     overflow: hidden;
@@ -84,22 +89,18 @@ li a:hover {
     font-variant: small-caps;
     color: #ffffff;
     letter-spacing: 5pt;
-    font-size: 3.5em;
-    text-align: left;
-    line-height: 2;
-    margin-left: 12%;
-    display: flex;
+    margin: 6%;
+    
 }
 
-#text-modify {
-    font-size: .65em;
-    margin-left: 17%;
-    margin-top: 6%;
+p {
+    font-size: 1em;
+    margin: 5%;
 }
 
 #text-modify2 {
     margin-top: 8%;
-    margin-left: -8%;
+    margin-left: -4%;
     font-size: 1.55em;
 }
 
